--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@hsafa/ui-sdk": "^0.4.0",
     "@monaco-editor/react": "^4.7.0",
     "@tailwindcss/vite": "^4.1.15",
+    "@types/diff": "^8.0.0",
+    "diff": "^8.0.2",
     "lucide-react": "^0.546.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
